# AECP

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md
.claude/: settings.local 2.json  settings.local 3.json
.claude/commands/: subagent-command.md
.github/workflows/: ci.yml
agents/: Dockerfile  pyproject.toml
agents/app/: __init__.py  channels.py  config.py  coordinator_client.py  executor.py  grpc_server.py  handoff.py  hydration.py  identity.py  interceptors.py  lifecycle.py  main.py  pool.py  sandbox.py  state_client.py  target_repo.py
agents/app/agents/v1/: agents_pb2.py  agents_pb2.pyi
agents/app/common/v1/: common_pb2.pyi
agents/app/coordinator/v1/: coordinator_pb2.py  coordinator_pb2.pyi  coordinator_pb2_grpc.py
agents/app/execution_backends/: base.py  claude_cli.py  cohere_backend.py
agents/app/integration/v1/: integration_pb2.pyi
agents/app/observability/v1/: observability_pb2.pyi
agents/app/state/v1/: state_pb2.py  state_pb2.pyi
agents/app/taskgraph/v1/: taskgraph_pb2.py  taskgraph_pb2.pyi
agents/tests/: fakes.py  test_concurrent_sessions.py  test_executor.py  test_grpc_server.py  test_handoff.py  test_hydration.py  test_identity.py  test_lifecycle.py  test_pool.py  test_sandbox.py
agents/tests/execution_backends/: test_claude_cli.py  test_cohere_backend.py
coordinator/: Dockerfile  pyproject.toml
coordinator/app/: __init__.py  agent_pool_client.py  assignment.py  audit_client.py  channels.py  config.py  grpc_server.py  integration_client.py  main.py  ownership.py  scheduler.py  state_client.py  statemachine.py  taskgraph_client.py  tradeoff.py
coordinator/app/agents/v1/: agents_pb2_grpc.py
coordinator/app/common/v1/: common_pb2.py
coordinator/app/coordinator/v1/: coordinator_pb2.py
coordinator/app/integration/v1/: integration_pb2_grpc.py
coordinator/app/taskgraph/v1/: taskgraph_pb2.py
coordinator/tests/: fakes.py  test_assignment.py  test_concurrent_agents.py  test_config.py  test_grpc_server.py  test_ownership.py  test_scheduler.py  test_statemachine.py  test_tradeoff.py
coordinator/tests/integration/: docker-compose.test.yml  test_e2e_docker_compose.py  test_full_system_e2e.py
dashboard/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/agents/: page.tsx
dashboard/app/decisions/: page.tsx
dashboard/app/escalations/: page.tsx
dashboard/components/: AsyncSection.test.tsx  AsyncSection.tsx  AuthGuard.tsx  Nav.tsx  StatusBadge.test.tsx  StatusBadge.tsx
dashboard/lib/: api-client.test.ts  api-client.ts  auth.test.ts  auth.ts  useAsync.test.ts  useAsync.ts
deploy/docker/: docker-compose.yml  otel-collector-config.yaml
deploy/terraform/: main.tf
docs/adr/: 0001-record-architecture-decisions.md  0002-all-python-backend.md  0003-oidc-human-auth-mtls-service-identity.md  0004-postgres-rls-multitenancy.md  0005-grpc-as-internal-transport.md  0006-secrets-management.md  0007-agent-pool-has-no-taskgraph-edge.md  0008-mtls-cert-issuance-and-allowlist-rollout.md  0009-agent-sandbox-isolation-technology.md
gateway/: Dockerfile  pyproject.toml
gateway/app/: __init__.py  auth.py  channels.py  config.py  deps.py  errors.py  main.py  proxy.py  rate_limit.py  schemas.py  tenancy.py
gateway/app/agents/v1/: agents_pb2_grpc.py
gateway/app/coordinator/v1/: coordinator_pb2.py
gateway/app/routers/: agents.py  coordinator.py  decisions.py  escalations.py  tasks.py
gateway/tests/: conftest.py  test_auth.py  test_deps.py  test_rate_limit.py  test_routers_agents.py  test_routers_coordinator.py  test_routers_decisions.py  test_routers_gapped.py  test_routers_tasks.py  test_tenancy.py
integration/: Dockerfile  pyproject.toml
integration/app/: __init__.py  channels.py  config.py  conflict.py  grpc_server.py  interceptors.py  main.py  merge_policy.py  ownership.py  semantic_diff.py  state_client.py  taskgraph_client.py
integration/app/integration/v1/: integration_pb2.py
integration/tests/: fakes.py  test_concurrent_agents.py  test_conflict.py  test_grpc_server.py  test_merge_policy.py  test_semantic_diff.py
observability/: Dockerfile  pyproject.toml
observability/app/: __init__.py  audit.py  config.py  grpc_server.py  interceptors.py  main.py  metrics.py  repository.py
observability/app/agents/v1/: agents_pb2.py
observability/app/observability/v1/: observability_pb2_grpc.py
observability/app/state/v1/: state_pb2.py
observability/dashboards/: agent_pool_health.json
observability/migrations/: 0001_audit_trail.sql
observability/tests/: fakes.py  test_audit.py  test_config.py  test_grpc_server.py  test_metrics.py  test_repository_integration.py
platform/: pyproject 2.toml
platform/aecp_platform/: __init__.py  config.py  dbtenant.py  errors.py  identity.py  secrets.py  telemetry.py  tracing_grpc.py
platform/tests/: test_identity.py  test_tracing_grpc.py
proto/: buf.gen.yaml  buf.yaml
security/: SECURITY.md  THREAT_MODEL.md
state/: Dockerfile  Dockerfile 2  pyproject 2.toml  pyproject.toml
state/app/: __init__.py  config.py  contracts.py  decision_log.py  drift.py  grpc_server.py  interceptors.py  main.py  ownership_map.py  repository.py
state/migrations/: 0001_state_layer.sql
state/tests/: fakes.py  test_contracts.py  test_decision_log.py  test_drift.py  test_grpc_server.py  test_imports.py  test_interceptors.py  test_ownership_map.py  test_repository.py
taskgraph/: Dockerfile  pyproject 2.toml  pyproject.toml
taskgraph/app/: __init__.py  config.py  graph 2.py  graph.py  grpc_server.py  interceptors.py  main.py  ownership.py  repository.py  risk_tier.py  schema.py
taskgraph/app/agents/v1/: agents_pb2.py
taskgraph/app/observability/v1/: observability_pb2.py
taskgraph/migrations/: 0001_task_nodes.sql
taskgraph/tests/: fakes.py  test_graph.py  test_grpc_server.py  test_ownership.py  test_repository.py  test_risk_tier.py
(+36 files in other folders)
