[project]
name = "aecp-agents"
version = "0.1.0"
description = "Agent lifecycle management: spin-up, context hydration, handoff, teardown. Each agent session is disposable and stateless; durable knowledge lives only in the State Layer."
requires-python = ">=3.12"
dependencies = [
    "aecp-platform",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "grpcio>=1.68",
    "pydantic>=2.9",
]

[tool.uv.sources]
aecp-platform = { path = "../platform", editable = true }

[dependency-groups]
dev = ["ruff>=0.7", "mypy>=1.13", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
