[project]
name = "aecp-coordinator"
version = "0.1.0"
description = "The engineering manager: owns the task graph's runtime scheduling, assigns work to agents, decides sequencing, and is the only component allowed to make cross-agent tradeoffs."
requires-python = ">=3.12"
dependencies = [
    "aecp-platform",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "grpcio>=1.68",
    "grpcio-reflection>=1.68",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
aecp-platform = { path = "../platform", editable = true }

[dependency-groups]
dev = ["ruff>=0.7", "mypy>=1.13", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
