[project]
name = "aecp-gateway"
version = "0.1.0"
description = "Human-facing API gateway / BFF for the dashboard. Terminates OIDC sessions, resolves tenant context, rate-limits, and proxies to internal gRPC services. The only AECP component reachable from outside the private network."
requires-python = ">=3.12"
dependencies = [
    "aecp-platform",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "grpcio>=1.68",
    "pydantic>=2.9",
    "authlib>=1.3",
    "itsdangerous>=2.2",
]

[tool.uv.sources]
aecp-platform = { path = "../platform", editable = true }

[dependency-groups]
dev = ["ruff>=0.7", "mypy>=1.13", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
