[project]
name = "aecp-integration"
version = "0.1.0"
description = "Conflict & Integration Layer: detects overlapping/contradictory changes from parallel agents and applies an explicit per-risk-tier merge policy."
requires-python = ">=3.12"
dependencies = [
    "aecp-platform",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "grpcio>=1.68",
    "pydantic>=2.9",
]

[tool.uv.sources]
aecp-platform = { path = "../platform", editable = true }

[dependency-groups]
dev = ["ruff>=0.7", "mypy>=1.13", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
