[project]
name = "aecp-observability"
version = "0.1.0"
description = "Dashboards, agent activity logs, and the escalation audit trail. Owns the immutable record of every security-relevant and Tier-2+ event across AECP."
requires-python = ">=3.12"
dependencies = [
    "aecp-platform",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "grpcio>=1.68",
    "asyncpg>=0.30",
    "prometheus-client>=0.21",
]

[tool.uv.sources]
aecp-platform = { path = "../platform", editable = true }

[dependency-groups]
dev = ["ruff>=0.7", "mypy>=1.13", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
