[project]
name = "aecp-taskgraph"
version = "0.1.0"
description = "Task decomposition, dependency + ownership model. Decomposition quality is the highest-leverage part of AECP: prefer many small, sharply-bounded nodes over few large ones."
requires-python = ">=3.12"
dependencies = [
    "aecp-platform",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "grpcio>=1.68",
    "grpcio-reflection>=1.68",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
aecp-platform = { path = "../platform", editable = true }

[dependency-groups]
dev = ["ruff>=0.7", "mypy>=1.13", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
